--- a/package.json
+++ b/package.json
@@ -1,32 +1,20 @@
 {
-  "name": "@wpmvc/classic-editor",
-  "version": "0.0.3",
-  "description": "A React component for integrating WordPress' classic editor using wp.editor API",
-  "main": "lib/ClassicEditor.js",
-  "scripts": {
-    "build": "babel src --out-dir lib"
-  },
-  "keywords": [
-    "WordPress",
-    "Classic Editor",
-    "React",
-    "wp-editor"
+  "name": "jskit",
+  "private": true,
+  "version": "0.0.1",
+  "workspaces": [
+    "packages/*"
   ],
-  "author": "Md Al Amin",
-  "license": "MIT",
-  "dependencies": {
-    "@wordpress/element": "^6.9.0",
-    "styled-components": "^6.1.13"
+  "scripts": {
+    "start": "pnpm -r start",
+    "build": "pnpm -r build",
+    "format": "wp-scripts format 'packages/**/src/**/*.{js,jsx,ts,tsx,json,css,scss}'"
   },
-  "bugs": {
-    "url": "https://github.com/wpmvc/classic-editor/issues"
-  },
-  "homepage": "https://github.com/wpmvc/classic-editor#readme",
   "devDependencies": {
-    "@babel/cli": "^7.25.7",
-    "@babel/core": "^7.25.7",
-    "@babel/preset-env": "^7.25.7",
-    "@babel/preset-react": "^7.25.7",
-    "babel-cli": "^6.26.0"
+    "@vitejs/plugin-react": "^4.5.2",
+    "@wordpress/scripts": "^30.18.0",
+    "typescript": "^5.8.3",
+    "vite": "^6.3.5",
+    "vite-plugin-dts": "^4.5.4"
   }
 }
