--- a/packages/fields/package.json
+++ b/packages/fields/package.json
@@ -38,6 +38,7 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@wordpress/block-editor": "^14.20.0",
     "@wordpress/components": "^29.11.0",
+    "@wordpress/compose": "^7.25.0",
     "@wordpress/element": "^6.25.0",
     "@wordpress/i18n": "^5.25.0",
     "@wordpress/icons": "^10.25.0",
