--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "typescript": "^5.8.3",
     "vite": "^7.0.0",
     "vite-plugin-dts": "^4.5.4"
+  },
+  "dependencies": {
+    "@wpmvc/components": "link:../../../../../../../Library/pnpm/global/5/node_modules/@wpmvc/components"
   }
 }
