--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "@wordpress/components": "^29.12.0",
+    "@wordpress/compose": "^7.26.0",
     "@wordpress/dataviews": "^4.22.0",
     "@wordpress/element": "^6.26.0",
     "@wordpress/i18n": "^5.26.0",
