--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,2 +1,4 @@
 packages:
   - packages/*
+overrides:
+  '@wpmvc/components': link:../../../../../../../Library/pnpm/global/5/node_modules/@wpmvc/components
