Connect components with theme colors

--- a/packages/admin-sidebar/package.json
+++ b/packages/admin-sidebar/package.json
@@ -4,6 +4,7 @@
 	"description": "Professional React hooks for WordPress admin interfaces with complete sidebar management and responsive layout control.",
 	"author": "Md Al Amin",
 	"license": "MIT",
+	"type": "module",
 	"main": "build/admin-sidebar.umd.js",
 	"module": "build/admin-sidebar.es.js",
 	"types": "build-types/types/index.d.ts",
