--- a/packages/classic-editor/package.json
+++ b/packages/classic-editor/package.json
@@ -4,6 +4,7 @@
   "description": "A React component for integrating WordPress' classic editor using wp.editor API",
   "author": "Md Al Amin",
   "license": "MIT",
+  "type": "module",
   "main": "build/classic-editor.umd.js",
   "module": "build/classic-editor.es.js",
   "types": "build-types/types/index.d.ts",
