--- a/packages/colors/package.json
+++ b/packages/colors/package.json
@@ -2,6 +2,7 @@
   "name": "@wpmvc/colors",
   "version": "0.0.1",
   "author": "Md Al Amin",
+  "type": "module",
   "main": "build/colors.umd.js",
   "module": "build/colors.es.js",
   "types": "build-types/types/index.d.ts",
@@ -27,6 +28,7 @@
   "dependencies": {
     "@wordpress/data": "^10.25.0",
     "@wordpress/element": "^6.26.0",
-    "immer": "^10.1.1"
+    "immer": "^10.1.1",
+    "styled-components": "^6.1.19"
   }
 }
