--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -4,6 +4,7 @@
   "description": "Reusable components package for WordPress MVC JSKit.",
   "author": "Md Al Amin",
   "license": "MIT",
+  "type": "module",
   "main": "build/components.umd.js",
   "module": "build/components.es.js",
   "types": "build-types/types/index.d.ts",
@@ -37,6 +38,8 @@
     "@wordpress/dataviews": "^4.22.0",
     "@wordpress/element": "^6.26.0",
     "@wordpress/i18n": "^5.26.0",
+    "@wordpress/icons": "^10.26.0",
+    "@wpmvc/colors": "link:C:/Users/tanji/AppData/Local/pnpm/global/5/node_modules/@wpmvc/colors",
     "clsx": "^2.1.1",
     "lodash": "^4.17.21",
     "styled-components": "^6.1.19"
