--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@wpmvc/data",
   "version": "0.0.1",
-	"author": "Md Al Amin",
-	"main": "build/data.umd.js",
-	"module": "build/data.es.js",
-	"types": "build-types/types/index.d.ts",
+  "author": "Md Al Amin",
+  "type": "module",
+  "main": "build/data.umd.js",
+  "module": "build/data.es.js",
+  "types": "build-types/types/index.d.ts",
   "scripts": {
     "start": "vite build --watch",
     "build": "vite build"
