--- a/packages/fields/package.json
+++ b/packages/fields/package.json
@@ -4,6 +4,7 @@
   "description": "Reusable fields package for WordPress MVC JSKit.",
   "author": "Md Al Amin",
   "license": "MIT",
+  "type": "module",
   "main": "build/fields.umd.js",
   "module": "build/fields.es.js",
   "types": "build-types/types/index.d.ts",
@@ -42,7 +43,9 @@
     "@wordpress/element": "^6.25.0",
     "@wordpress/i18n": "^5.25.0",
     "@wordpress/icons": "^10.25.0",
+    "@wpmvc/components": "link:C:/Users/tanji/AppData/Local/pnpm/global/5/node_modules/@wpmvc/components",
     "clsx": "^2.1.1",
+    "components": "link:C:/Users/tanji/AppData/Local/pnpm/global/5/node_modules/@wpmvc/components",
     "lodash": "^4.17.21",
     "react-select": "^5.10.1",
     "styled-components": "^6.1.18"
