--- a/packages/fields/package.json
+++ b/packages/fields/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wpmvc/fields",
-  "version": "0.0.21",
+  "version": "0.0.22",
   "description": "Reusable fields package for WordPress MVC JSKit.",
   "author": "Md Al Amin",
   "license": "MIT",
@@ -42,6 +42,7 @@
     "@wordpress/element": "^6.25.0",
     "@wordpress/i18n": "^5.25.0",
     "@wordpress/icons": "^10.25.0",
+    "@wpmvc/components": "^0.0.1",
     "clsx": "^2.1.1",
     "lodash": "^4.17.21",
     "react-select": "^5.10.1",
