--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -39,7 +39,7 @@
     "@wordpress/element": "^6.26.0",
     "@wordpress/i18n": "^5.26.0",
     "@wordpress/icons": "^10.26.0",
-    "@wpmvc/colors": "link:C:/Users/tanji/AppData/Local/pnpm/global/5/node_modules/@wpmvc/colors",
+    "@wpmvc/colors": "^0.0.1",
     "clsx": "^2.1.1",
     "lodash": "^4.17.21",
     "styled-components": "^6.1.19"
