--- a/packages/colors/package.json
+++ b/packages/colors/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wpmvc/colors",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "author": "Md Al Amin",
   "type": "module",
   "main": "build/colors.umd.js",
@@ -23,7 +23,8 @@
     "@types/react": "^19.1.8",
     "path": "^0.12.7",
     "react": "^19.1.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vite": "^7.1.3"
   },
   "dependencies": {
     "@wordpress/data": "^10.26.0",
