--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -33,24 +33,26 @@
     "url": "https://github.com/wpmvc/jskit/issues"
   },
   "dependencies": {
-    "@wordpress/components": "^29.12.0",
-    "@wordpress/compose": "^7.26.0",
-    "@wordpress/dataviews": "^4.22.0",
-    "@wordpress/element": "^6.26.0",
-    "@wordpress/i18n": "^5.26.0",
-    "@wordpress/icons": "^10.26.0",
-    "@wpmvc/colors": "^0.0.11",
+    "@vitejs/plugin-react": "^5.0.2",
+    "@wordpress/components": "^30.2.0",
+    "@wordpress/compose": "^7.29.0",
+    "@wordpress/dataviews": "^7.0.0",
+    "@wordpress/element": "^6.29.0",
+    "@wordpress/i18n": "^6.2.0",
+    "@wordpress/icons": "^10.29.0",
+    "@wpmvc/colors": "^0.0.12",
     "clsx": "^2.1.1",
     "lodash": "^4.17.21",
-    "styled-components": "^6.1.19"
+    "styled-components": "^6.1.19",
+    "vite-plugin-dts": "^4.5.4"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.20",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "@wordpress/scripts": "^30.19.0",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
+    "@wordpress/scripts": "^30.22.0",
     "path": "^0.12.7",
-    "typescript": "^5.8.3",
-    "vite": "^7.1.2"
+    "typescript": "^5.9.2",
+    "vite": "^7.1.4"
   }
 }
