--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -21,13 +21,15 @@
   },
   "devDependencies": {
     "path": "^0.12.7",
-    "typescript": "^5.8.3"
+    "typescript": "^5.9.2"
   },
   "dependencies": {
-    "@wordpress/api-fetch": "^7.26.0",
-    "@wordpress/data": "^10.26.0",
-    "@wordpress/url": "^4.26.0",
-    "immer": "^10.1.1",
-    "vite": "^7.1.3"
+    "@vitejs/plugin-react": "^5.0.2",
+    "@wordpress/api-fetch": "^7.29.0",
+    "@wordpress/data": "^10.29.0",
+    "@wordpress/url": "^4.29.0",
+    "immer": "^10.1.3",
+    "vite": "^7.1.4",
+    "vite-plugin-dts": "^4.5.4"
   }
 }
