--- a/packages/fields/package.json
+++ b/packages/fields/package.json
@@ -44,7 +44,8 @@
     "@wordpress/element": "^6.31.0",
     "@wordpress/i18n": "^6.4.0",
     "@wordpress/icons": "^10.31.0",
-    "@wpmvc/components": "^0.0.24",
+    "@wpmvc/classic-editor": "^0.0.5",
+    "@wpmvc/components": "link:../../../../../../../../../Library/pnpm/global/5/node_modules/@wpmvc/components",
     "clsx": "^2.1.1",
     "lodash": "^4.17.21",
     "react-select": "^5.10.2",
