--- a/packages/fields/package.json
+++ b/packages/fields/package.json
@@ -45,7 +45,7 @@
     "@wordpress/i18n": "^6.4.0",
     "@wordpress/icons": "^10.31.0",
     "@wpmvc/classic-editor": "^0.0.5",
-    "@wpmvc/components": "link:../../../../../../../../../Library/pnpm/global/5/node_modules/@wpmvc/components",
+    "@wpmvc/components": "^0.0.24",
     "clsx": "^2.1.1",
     "lodash": "^4.17.21",
     "react-select": "^5.10.2",
