--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@vitejs/plugin-react": "^5.0.3",
+    "@wordpress/api-fetch": "^7.32.0",
     "@wordpress/components": "^30.4.0",
     "@wordpress/compose": "^7.31.0",
     "@wordpress/dataviews": "^9.0.0",
@@ -43,6 +44,7 @@
     "@wpmvc/colors": "^0.0.12",
     "clsx": "^2.1.1",
     "lodash": "^4.17.21",
+    "react-select": "^5.10.2",
     "styled-components": "^6.1.19",
     "vite-plugin-dts": "^4.5.4"
   },
