--- a/packages/fields/package.json
+++ b/packages/fields/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wpmvc/fields",
-  "version": "0.0.37",
+  "version": "0.0.38",
   "description": "Reusable fields package for WordPress MVC JSKit.",
   "author": "Md Al Amin",
   "license": "MIT",
@@ -49,9 +49,7 @@
     "clsx": "^2.1.1",
     "lodash": "^4.17.21",
     "react-select": "^5.10.2",
-    "styled-components": "^6.1.19",
-    "vite": "^7.2.0",
-    "vite-plugin-dts": "^4.5.4"
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.20",
@@ -59,6 +57,8 @@
     "@types/react-dom": "^19.2.2",
     "@wordpress/scripts": "^30.27.0",
     "path": "^0.12.7",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vite-plugin-dts": "^4.5.4",
+    "vite": "^7.2.0"
   }
 }
